<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title:</string>
    <string name="author">Author:</string>
    <string name="desc">Description:</string>
    <string name="publish">Published At:</string>
    <string name="url">News URL:</string>
    <string name="url_image">Images URL:</string>
    <string name="source_id">Source:</string>
    <string name="source_name">Source Name:</string>
</resources>